# aisenpai

./: docker-compose.yml
api-server/: app.py  pyproject.toml
api-server/.devcontainer/: Dockerfile  devcontainer.json
api-server/srcs/controllers/: article_search_controller.py  related_terms_controller.py
api-server/srcs/dev_controllers/: cache_controller.py
api-server/srcs/models/: article_search_model.py  cache_model.py  noun_detect_model.py  related_terms_model.py
scenario-server/: .eslintrc.js  app.js  package-lock.json  package.json
scenario-server/.devcontainer/: devcontainer.json
scenario-server/common/: logger.js
scenario-server/config/: log4js.json
scenario-server/routes/: http.js  socketio.js
ui/: .eslintrc.js  nuxt.config.js  package-lock.json  package.json
ui/.devcontainer/: Dockerfile  devcontainer.json
ui/components/: BotMessage.vue  UserMessage.vue
ui/layouts/: default.vue
ui/pages/: ChatPage.vue
ui/src/: App.vue
ui/src/components/: BotMessage.vue  UserMessage.vue
